@@ -1,6 +1,11 @@
 2019-12-20  Jakub Jelinek  <jakub@redhat.com>
 
 	Backported from mainline
+	2019-11-27  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/92524
+	* g++.dg/cpp0x/pr92524.C: New test.
+
 	2019-11-26  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/92648
